--- a/login.html
+++ b/login.html
@@ -31,9 +31,9 @@
 
 		<div id="formContainer">
 			<h1 class=formtitles>Sign Up</h1>
-			<input type="username" placeholder="username" id="username">
-			<input type="email" placeholder="email" id="email">
-			<input type="password" placeholder="password" id="password">
+			<input type="username" placeholder="Username" id="username">
+			<input type="email" placeholder="Email Address" id="email">
+			<input type="password" placeholder="Password" id="password">
 
 			<div id=divsign>
 				<button onclick="signUp()" id="signUp">Sign Up</button>
@@ -43,9 +43,9 @@
 
 		<div id="formContainer1">
 			<h1 class=formtitles>Sign In/Out</h1>
-			<input type="username" placeholder="username" id="username1">
-			<input type="email" placeholder="email" id="email1">
-			<input type="password" placeholder="password" id="password1">
+			<input type="username" placeholder="Username" id="username1">
+			<input type="email" placeholder="Email Address" id="email1">
+			<input type="password" placeholder="Password" id="password1">
 
 			<div id=divsigninout>
 				<button onclick="signIn()" id="signIn">Sign In</button>
