--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,7 @@
 		</div>
 			
 		<div id="profile">
-			<h1 id="profilename"></h1>
+			<h1 id="profilename">Please Log In</h1>
 		</div>
 
 		<div id="bookmarks">
