--- a/profile.html
+++ b/profile.html
@@ -28,7 +28,8 @@
 		</div>
 			
 		<div id="profile">
-			<h1 id="profilename">Please Log In</h1>
+			<h1 id="profilename">Profile</h1>
+			<h1 id="profiledescription">Please sign in to access this page</h1>
 		</div>
 
 		<div id="bookmarks">
