--- a/act.html
+++ b/act.html
@@ -44,17 +44,17 @@
 			</div>		
 		</div>
 -->
-		<div class=mainDiv1 style="background-color: #077187">
-			<div class=sectionfourth1 style="background-color: #077187">
+		<div class=mainDiv1 style="background-color: #04A777">
+			<div class=sectionfourth1 style="background-color: #04A777">
 				<a href="https://www.amazon.com/Official-ACT-Prep-Guide-2020/dp/1119685761/ref=zg_bs_11670_1?_encoding=UTF8&psc=1&refRID=8YKR0KZK2Y2M8ADFBR2T" target="_blank"><img class=image2 src="Pictures/actguide.jpg"></a>		
 			</div>
-			<div class=sectionfourth2 style="background-color: #077187">
+			<div class=sectionfourth2 style="background-color: #04A777">
 				<a href="https://www.amazon.com/Princeton-Review-Premium-Prep-2020/dp/0525568808/ref=zg_bs_11670_2?_encoding=UTF8&psc=1&refRID=87BQEJTK2QBP1AXNF55H" target="_blank"><img class=image2 src="Pictures/actpremium.jpg"></a>		
 			</div>
-			<div class=sectionfourth3 style="background-color: #077187">
+			<div class=sectionfourth3 style="background-color: #04A777">
 				<a href="https://www.amazon.com/ACT-Prep-Plus-2021-Strategies/dp/150626249X/ref=zg_bs_11670_6?_encoding=UTF8&psc=1&refRID=SXY2ZMQXW30KAF2AH4R9" target="_blank"><img class=image2 src="Pictures/kaplan.jpg"></a>						
 			</div>
-			<div class=sectionfourth4 style="background-color: #077187">
+			<div class=sectionfourth4 style="background-color: #04A777">
 				<h1 class=section4header>Study Guides + Practice Tests</h1>
 				<p class=section4para>These books have tons of study material detailing the parts of the ACT and material that aims to teach individuals the topics covered by the test. With full sized practice tests that closely resemble the real test, you will be able to practice the test before you actually take it. </p>
 			</div>
@@ -62,45 +62,45 @@
 
 
 
-		<div class=mainDiv2 style="background-color: #9ECE9A">
-			<div class=sectionthird1 style="background-color: #9ECE9A">
+		<div class=mainDiv2 style="background-color: #FCF7F8">
+			<div class=sectionthird1 style="background-color: #FCF7F8">
 				<h1 class=section1header>Video Lessons + Games + Quizzes</h1>
 				<p class=section1para>These websites have thousands of video lessons, games, quizzes, and full sized ACT practice tests that can give you a better chance at improving your ACT score. </p>
 			</div>
-			<div class=sectionthird2 style="background-color: #9ECE9A">
+			<div class=sectionthird2 style="background-color: #FCF7F8">
 				<a href="https://khanacademy.org" target="_blank"><img class=image3 src="Pictures/khan.png"></a>						
 			</div>	
-			<div class=sectionthird3 style="background-color: #9ECE9A">
+			<div class=sectionthird3 style="background-color: #FCF7F8">
 				<a href="https://academy.act.org/" target="_blank"><img class=image4 src="Pictures/actacademy1.png"></a>						
 			</div>		
 		</div>
 
 
-		<div class=mainDiv1 style="background-color: #074F57">
-			<div class=sectionfourth1 style="background-color: #074F57">
+		<div class=mainDiv1 style="background-color: #04A777">
+			<div class=sectionfourth1 style="background-color: #04A777">
 				<a href="https://www.englishgrammar.org/" target="_blank"><img class=image5 src="Pictures/englishgrammar.png"></a>						
 			</div>
-			<div class=sectionfourth3 style="background-color: #074F57">
+			<div class=sectionfourth3 style="background-color: #04A777">
 				<a href="https://www.chompchomp.com/" target="_blank"><img class=image6 src="Pictures/grammarbytes.jpg"></a>						
 			</div>
-			<div class=sectionfourth2 style="background-color: #074F57">
+			<div class=sectionfourth2 style="background-color: #04A777">
 				<a href="https://quizlet.com" target="_blank"><img class=image7 src="Pictures/quizlet.png"></a>						
 			</div>
-			<div class=sectionfourth4 style="background-color: #074F57">
+			<div class=sectionfourth4 style="background-color: #04A777">
 				<h1 class=section4header>English Practice</h1>
 				<p class=section4para>These websites are great ways to practice your vocabulary, grammar, and punctuation knowledge to prepare yourself for the English portion of the ACT.</p>
 			</div>
 		</div>
 
-		<div class=mainDiv2 style="background-color: #E4C5AF">
-			<div class=sectionthird1 style="background-color: #E4C5AF">
+		<div class=mainDiv2 style="background-color: #FCF7F8">
+			<div class=sectionthird1 style="background-color: #FCF7F8">
 				<h1 class=section1header>Math Practice</h1>
 				<p class=section1para>These ACT approved guides to the mathematics portion of the ACT have in-depth material that teach exactly how to solve specfic math problems along with thousands of questions and math ACT tests.</p>
 			</div>
-			<div class=sectionthird2 style="background-color: #E4C5AF">
+			<div class=sectionthird2 style="background-color: #FCF7F8">
 				<a href="https://www.amazon.com/Official-ACT-Mathematics-Guide/dp/1119634377/ref=sr_1_3?crid=3I9EE2O3CFG47&dchild=1&keywords=act+mathematics+guide&qid=1597613810&s=books&sprefix=act+mathematics+guide%2Cstripbooks%2C176&sr=1-3" target="_blank"><img class=image8 src="Pictures/actmathematicsguide.jpg"></a>						
 			</div>	
-			<div class=sectionthird3 style="background-color: #E4C5AF">
+			<div class=sectionthird3 style="background-color: #FCF7F8">
 				<a href="https://www.act.org/content/act/en/products-and-services/the-act/test-preparation/math-practice-test-questions.html?page=0&chapter=0" target="_blank"><img class=image9 src="Pictures/actmath.png"></a>						
 			</div>		
 		</div>
