--- a/login.html
+++ b/login.html
@@ -43,8 +43,7 @@
 
 		<div id="formContainer1">
 			<h1 class=formtitles>Sign In/Out</h1>
-			<input type="username" placeholder="Username" id="username1">
-			<input type="email" placeholder="Email Address" id="email1">
+			<input type="email" placeholder="Username" id="username1">
 			<input type="password" placeholder="Password" id="password1">
 
 			<div id=divsigninout>
