--- a/clubs.html
+++ b/clubs.html
@@ -50,7 +50,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Recycling Club</span>
+								<span class=clubname><strong>Recycling Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Joining a recycling group or club is a great way to learn more about the natural environment while working to help it as well. Most recycling clubs gather a large group of volunteers and at a specfic location, throw away any trash and collect all recyclable materials. In schools, recycling groups can buy or create recycling bins that can be placed in classrooms and voluteers may regularly collect the recylcable materials. </h1>
@@ -69,7 +69,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>UNICEF Club</span>
+								<span class=clubname><strong>UNICEF Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>The UNICEF High School Club program is a youth-led initiative that partners with UNICEF to educate, advocate and fundraise to support UNICEF's lifesaving work. Members of a Unicef Club work together to raise awareness for the global issues that UNICEF works to solve and acquires the necessary funds to solve these problems. </h1>
@@ -88,7 +88,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Cancer Awareness Club</span>
+								<span class=clubname><strong>Cancer Awareness Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>If you have a passion for raising awareness for problems that are not often talked about, specifically rare diseases like Cancer, this is the club for you. Members of a Cancer Awareness club generally work to raise awareness for certaint types of cancer through social media posts, school banners, fundraisers, etc.</h1>
@@ -107,7 +107,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Red Cross</span>
+								<span class=clubname><strong>Red Cross</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>The American Red Cross, also known as The American National Red Cross, is a humanitarian organization that provides emergency assistance, disaster relief, and disaster preparedness education in the United States. Red Cross Clubs are an extension of a local Red Cross Region and work on service projects to help the community and those in need. </h1>
@@ -126,7 +126,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Habitat for Humanity</span>
+								<span class=clubname><strong>Habitat for Humanity</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Habitat for Humanity is a nonprofit organization that gathers volunteers and resources to build cheap, affordable homes for those in need of proper shelter. As a student group, you and your friends can volunteer and spend a couple hours helping either physically or even online. </h1>
@@ -145,7 +145,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Amnesty International</span>
+								<span class=clubname><strong>Amnesty International</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Amnesty International is an organization that has begun a movement to fight injustice and help create a world where human rights are enjoyed by all. An Amnesty International club generally consists of students who meet regularly and engage in specific human rights campaigns or protests that they are passionate about. </h1>
@@ -164,7 +164,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>DECA</span>
+								<span class=clubname><strong>DECA</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>DECA is a not-for-profitstudent organization that hosts international competitions for over 200,000 students every year, testing students on their understanding of global finance and the economy, as well as their leadership and managerial skills. </h1>
@@ -183,7 +183,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>FBLA</span>
+								<span class=clubname><strong>FBLA</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>The Future Business Leaders of America is a national student organization that aims tp build the entrepenurs and leaders of tomorrow. With over 200,000 members and a concrete national structure, FBLA works to inspire and prepares students to become community-minded business leaders in a global society with their career and technical competitive events.  </h1>
@@ -202,7 +202,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>TSA</span>
+								<span class=clubname><strong>TSA</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>The Technology Student Association is a national student organization created to develop student's skills in science, technology, engineering, and mathematics as well as business education. TSA aims to develop leadership, academic, and business management skills in the workplace among students and leaders within the community. TSA hosts multiple regional, state, and national competitions for hundreds of thousands of students every year.  </h1>
@@ -221,7 +221,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Model UN</span>
+								<span class=clubname><strong>Model UN</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Model United Nations, also known as Model UN or MUN, is an educational simulation and/or academic activity in which students can learn about diplomacy, international relations, and the United Nations. </h1>
@@ -240,7 +240,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Book Club</span>
+								<span class=clubname><strong>Book Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>If you enjoy reading but never know what to read or simply want to challenge yourself and dive into more interesting or complex literature, this club is for you. Generally, a book club is structured so that a large group of people read the same book and meet regularly to discuss the book and further their understanding of the text, but these clubs can also be structured more loosely where individuals read their own books and simply give each other recommendations or talk about books they've already read, </h1>
@@ -259,7 +259,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Political Club</span>
+								<span class=clubname><strong>Political Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>A political club is an organization where generally like-minded people can discuss and debate political issues and their government's stance on these issues. Political clubs generally consist of members from the same party but can have people with a diverse range of stances. </h1>
@@ -277,7 +277,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Comic Book Club</span>
+								<span class=clubname><strong>Comic Book Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Interested in reading and discussing comic books and graphic novels with friends? Well a comic book club may be the right thing for you. Comic book clubs, generally located in places with access to comic book stores, are great ways to read comic books about your favorite characters with your friends, while also engaging in deep discussions and debates about these stories. </h1>
@@ -295,7 +295,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Foreign Language Club</span>
+								<span class=clubname><strong>Foreign Language Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>If you are interested in learning a new language or experiencing the culture of a particular group of people from a foreign country, this is the club for you. If a popular language like French, Spanish, Japanese, or German is not taught at your school, consider joining a foreign language club where you can learn to speak and write in these languages and communicate with others who are learning along with you.</h1>
@@ -313,7 +313,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Photography Club</span>
+								<span class=clubname><strong>Photography Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>This is a club for individuals interested in learning about photography, the principles and techniques that professional photographers use, and the utilization of editing software to touch up these photos. Whether you've never picked up a camera before or you've breathtaking pictures of natural features, everyone can learn from each other's work at a Photography club. All you need is a camera and the interest to go out and explore! </h1>
@@ -331,7 +331,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Video Tech Club</span>
+								<span class=clubname><strong>Video Tech Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>This club is for those interested in producing their own video creations. In this club, members learn various techniques and tricks of filming, editing, and publishing videos for various purposes. Many Video Tech clubs even publish their videos online so people outside of the club can see their creations. </h1>
@@ -350,7 +350,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Film Club</span>
+								<span class=clubname><strong>Film Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Film clubs are common all around the world for people of all ages. Members of these clubs are individuals who not only have an interest in watching films, but analyzing them, discussing the techniques and work that went to creating them, and debating the proper rankings and comparison of different films.  </h1>
@@ -369,7 +369,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Competitive Mathematics Club</span>
+								<span class=clubname><strong>Competitive Mathematics Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>If you are skilled in quickly solving complex math problems and memorizing tons of equations and theorems, this is the club for you. Of course, anyone can join a competitive math club but this club is generally meant for those who are really good at math and can learn and solve problems quickly in a stressful environment. There are many math competitions that students in these clubs can register for like AIME, AMC, and the National Math League, and many of these clubs like to have students form teams and train over a course of a couple of months. </h1>
@@ -388,7 +388,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Mathematics Club</span>
+								<span class=clubname><strong>Mathematics Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Mathematics club members are people that have an interest for learning mathematics principles and theorems to improve their knowledge of the mathematical world. Math clubs can also be used as platforms for peers to gather and help each other out with their math homework, tests or other school work, generally led by a math teacher. </h1>
@@ -407,7 +407,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Ecology and Botany Club</span>
+								<span class=clubname><strong>Ecology and Botany Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>This club is generally for those with a passion and interest to understand and learn more about the natural environment, specifically plants and animals. Members of an ecology and/or botany club generally partake in activities like planting seeds and crops, visiting public gardens or greenhouses, participating in discussions and debates about environmental problems, and many more engaging activites.</h1>
@@ -426,7 +426,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Physics Club</span>
+								<span class=clubname><strong>Physics Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>This is a club for those that are always interested in how everything in our universe works and interacts with each other. A physics club is a great way to learn more about the forces, energy, and objects that you interact with everyday, through hands on experiments and group discussions. Physics clubs may bring in professional physicists or physics professors and may even visit large scale physics experiments like observatories or particle colliders.</h1>
@@ -445,7 +445,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Biology and Anatomy Club</span>
+								<span class=clubname><strong>Biology and Anatomy Club</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>Members of a Biology and Anatomy club are students that are interested in the composition of living organisms, mainly animals like us humans. In this club, students will likely learn about the anatomic structure of humans and other living organisms and the physiological processes that drive these organisms. Some clubs may even take students on field trips to museums or hospitals, dissect organisms to learn more about their internal structure, or even inspect medical skeletons. </h1>
@@ -464,7 +464,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>FRC Robotics</span>
+								<span class=clubname><strong>FRC Robotics</strong></span>
 							</div>
 							<div class=clubDescription>
 								<h1>The FIRST Robotics Competition is an international high school robotics competition. Each year, teams of high school students, coaches, and mentors work during a six-week period to build robots capable of competing in that year's game that weigh up to 125 pounds</h1>
@@ -483,7 +483,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>Science Olympiad</span>
+								<span class=clubname><strong>Science Olympiad</strong></span>
 							</div>
 
 							<div class=clubDescription>
@@ -503,7 +503,7 @@
 					<div class="clubDiv">
 						<div class=clubText>
 							<div class=clubInfo>
-								<span class=clubname>HOSA</span>
+								<span class=clubname><strong>HOSA</strong></span>
 							</div>
 
 							<div class=clubDescription>
