--- a/profile.html
+++ b/profile.html
@@ -24,9 +24,10 @@
 			<a href="act.html"><span class=title>ACT</span></a>
 			<a href="programs.html"><span class=title>Programs</span></a>
 			<a href="profile.html"><span class=title1>Profile</span></a>
-			<a href="login.html"><button id="login">Account</button></a>
+			<a href="login.html"><span class=title>Log In</span></a>
+			<a href="signup.html"><button id="login">Sign Up</button></a>
 		</div>
-			
+
 		<div id="profile">
 			<h1 id="profilename">Profile</h1>
 			<h1 id="profiledescription">Please sign in to access this page</h1>
