--- a/clubs.html
+++ b/clubs.html
@@ -24,7 +24,8 @@
 			<a href="act.html"><span class=title>ACT</span></a>
 			<a href="programs.html"><span class=title>Programs</span></a>
 			<a href="profile.html"><span class=title1>Profile</span></a>
-			<a href="login.html"><button id="login">Account</button></a>
+			<a href="login.html"><span class=title>Log In</span></a>
+			<a href="signup.html"><button id="login">Sign Up</button></a>
 		</div>
 		
 		<div class=mountainsDiv>
